--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -103,3 +103,12 @@
 	background-color: green !important;
 	opacity: 1 !important;
 }
+
+.noselect {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
