--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -66,7 +66,7 @@
 }
 .bowlers{
 	float: left;
-	text-align: center;
+	/*text-align: center;*/
 	width: 50%;
 }
 .lotteries{
@@ -111,4 +111,20 @@
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+}
+
+.bowler-item{
+	text-align: left !important;
+}
+
+.buy-tickets-box{
+	line-height: 0.5em;
+	text-align: right;
+	float: right;
+	background-color: red;
+	color: white;
+	padding: 1px;
+	margin: 1px;
+	font-size:9px;
+	height: 10px;
 }
