--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -7,7 +7,7 @@
 }
 .table{
 	display: inline-block;
-	width: 30%;
+	width: 25%;
 
 	height: 100%;
 	/*min-height: 300px;*/
@@ -20,10 +20,10 @@
 	/*left: 0;*/
 	/*top: 0;*/
 
-	padding-top: 10px;
-	padding-left: 5px;
-	padding-right: 5px;
-	border-right: 1px solid black;
+	/*padding-top: 10px;*/
+	padding-left: 2px;
+	padding-right: 2px;
+	border-right: 1px solid #d3d3d3;
 	overflow-y: scroll;
 }
 .smallLeagueBox{
@@ -31,17 +31,21 @@
 	width: 100%;
 	min-height: 115px;
 	/*background-color: black;*/
-	margin-bottom: 5px;
+	/*margin-bottom: 2px;*/
 	/*background-color: rgba(50,250,250,.75);*/
-	border: 1px solid black;
+	border: 1px solid #d3d3d3;
+	border-right: none;
+	border-bottom: none;
+	ma
+
 }
 .smallLeagueBox:hover{
 	background-color: white;
 }
 
 .smallLeagueBoxActive{
-	background-color: green !important;
-	opacity: .8 !important;
+	background-color: #e1e8ed !important;
+	/*opacity: .8 !important;*/
 }
 
 .smallLeagueBoxName{
