--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -36,15 +36,15 @@
 	border: 1px solid #d3d3d3;
 	border-right: none;
 	border-bottom: none;
-	ma
 
 }
 .smallLeagueBox:hover{
-	background-color: white;
+	background-color: #f5f5f5;
+
 }
 
 .smallLeagueBoxActive{
-	background-color: #e1e8ed !important;
+	background-color: #e0e0e0 !important;
 	/*opacity: .8 !important;*/
 }
 
